# Alphx

./: .gitignore  Caddyfile  README.md  ecosystem.config.js  package-lock.json  package.json  requirements.txt
.github/workflows/: deploy-contract.yml  test-contract.yml
backend/: casper.py  config.py  db.py  main.py  x402.py
backend/agents/: aggregator_agent.py  settler_agent.py  trader_a.py  trader_b.py  trader_c.py  twelvedata_agent.py  yahoo_agent.py
backend/casper_helper/: deploy_oracle.cjs  package-lock.json  package.json  settle_tx.cjs
contract/: Cargo.toml  Odra.toml
contract/.cargo/: config.toml
contract/minimal/: FXOracle_install.wat  FXOracle_minimal.wat  FXOracle_putkey_only.wat  FXOracle_v2.wat  FXOracle_v3.wat  FXOracle_v4.wat
contract/src/: lib.rs  oracle.rs
contract/wasm/: FXOracle.wasm
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentFeed.jsx  AgentRegistry.jsx  ArchitecturePortal.jsx  CircuitBreaker.jsx  MetricCards.jsx  NetworkTooltip.jsx  PriceChartModal.jsx  RateTable.jsx  SandboxWallet.jsx  SwapFeed.jsx  SwiftComparison.jsx  TradeForm.jsx  TradeRequestFeed.jsx  WalletConnect.jsx
frontend/src/pages/: Dashboard.jsx  Landing.jsx
